# CRL-Minimax

./: .gitignore  HANDOFF.md  README.md  pyproject.toml  requirements.txt
analysis/: aggregate.py  compare.py  continual_metrics.py  plots.py  schematics.py  style.py
configs/: atari5_ppo.yaml  atari5_ppo_finetune.yaml  atari5_ppo_smoke.yaml  atari5_ppo_v2.yaml  atari5_ppo_v2_finetune.yaml  atari5_ppo_v3.yaml  atari5_ppo_v3_finetune.yaml  atari5_ppo_v4.yaml  atari5_ppo_v4_clear.yaml  atari5_ppo_v4_finetune.yaml  atari5_ppo_v5.yaml  atari5_ppo_v5_clear.yaml  atari_diag.yaml  atari_diag_smoke.yaml  atari_order_random.yaml  atari_order_test.yaml  atari_probe_orderA.yaml  atari_probe_orderB.yaml  biggrid_20task.yaml  biggrid_20task_localfree.yaml  cartpole_family.yaml  cartpole_multihead.yaml  exp1_joint.yaml  exp2a_klmeasure.yaml  exp2b_bc.yaml  gridworld_20task.yaml  gridworld_20task_localfree.yaml  gridworld_exact.yaml  gridworld_manytask_exact.yaml  gridworld_manytask_sampled.yaml  gridworld_nn_three_task.yaml  gridworld_nn_three_task_sampled.yaml  gridworld_sampled.yaml  gridworld_tentask_sampled.yaml  gridworld_three_task.yaml  maze_20task.yaml  maze_20task_localfree.yaml  minatar_dqn.yaml  minatar_dqn_big.yaml  minatar_localfree.yaml  (+1 more)
crl/: __init__.py  baselines.py  buffers.py  config.py  dqn.py  evaluation.py  logging_utils.py  ppo_continual.py  seeding.py  trainer.py
diagnostics/: README.md
docs/: REINFORCE_to_PPO.md  citation_corrections.md
experiments/: aggregate_atari.py  aggregate_dqn.py  aggregate_seeds.py  aggregate_theory.py  atari_clear_comparison.py  (+15 more)
(+209 files in other folders)
